Displaying validation text for parallel octaves.

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class="manuscript">
   <app-game-board></app-game-board>
-  <div id="validation"></div>
+  <div id="parallel-octaves"></div>
 </div>
