--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 <div class="manuscript">
   <app-game-board></app-game-board>
+  
   <div id="parallel-octaves"></div>
+  <div id="parallel-fifths"></div>
 </div>
