Validation for dissonant intervals

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -2,5 +2,8 @@
   <app-game-board></app-game-board>
   
   <div id="parallel-octaves"></div>
+  <div id="hidden-octaves"></div>
   <div id="parallel-fifths"></div>
+  <div id="hidden-fifths"></div>
+  <div id="dissonant-intervals"></div>
 </div>
