High point validation

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -6,4 +6,5 @@
   <div id="parallel-fifths"></div>
   <div id="hidden-fifths"></div>
   <div id="dissonant-intervals"></div>
+  <div id="multiple-high-points"></div>
 </div>
