--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -7,4 +7,5 @@
   <div id="hidden-fifths"></div>
   <div id="dissonant-intervals"></div>
   <div id="multiple-high-points"></div>
+  <div id="crossed-voices"></div>
 </div>
