Consecutive 3rds, 6ths, and 10ths

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="manuscript">
   <app-game-board></app-game-board>
-  
+
   <div id="parallel-octaves"></div>
   <div id="hidden-octaves"></div>
   <div id="parallel-fifths"></div>
@@ -8,4 +8,7 @@
   <div id="dissonant-intervals"></div>
   <div id="multiple-high-points"></div>
   <div id="crossed-voices"></div>
+  <div id="first-measure-interval"></div>
+  <div id="last-measure-interval"></div>
+  <div id="thirds-sixths-tenths"></div>
 </div>
