Display and validation issues.

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,14 +1,19 @@
 <div class="manuscript">
   <app-game-board></app-game-board>
 
-  <div id="parallel-octaves"></div>
-  <div id="hidden-octaves"></div>
-  <div id="parallel-fifths"></div>
-  <div id="hidden-fifths"></div>
-  <div id="dissonant-intervals"></div>
-  <div id="multiple-high-points"></div>
-  <div id="crossed-voices"></div>
-  <div id="first-measure-interval"></div>
-  <div id="last-measure-interval"></div>
-  <div id="thirds-sixths-tenths"></div>
+  <div class="rule-validity-display">
+    <div id="parallel-octaves"></div>
+    <div id="hidden-octaves"></div>
+    <div id="parallel-fifths"></div>
+    <div id="hidden-fifths"></div>
+    <div id="dissonant-intervals"></div>
+    <div id="multiple-high-points"></div>
+    <div id="crossed-voices"></div>
+    <div id="first-measure-interval"></div>
+    <div id="last-measure-interval"></div>
+    <div id="thirds-sixths-tenths"></div>
+    <div id="tied-notes"></div>
+  </div>
 </div>
+
+
