--- a/ClientApp/src/app/home/home.component.css
+++ b/ClientApp/src/app/home/home.component.css
@@ -1,9 +1,5 @@
-.rule-valid { color: green; }
+.rule-valid { color: green; font-weight: bold; }
 .rule-invalid { color: red; }
-
-.rule-valid, .rule-invalid {
-    font-weight: bold;
-}
 
 .rule-validity-display {
     padding-left: 10px;
