Leading tone must be approached by step.

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -13,6 +13,7 @@
     <div id="last-measure-interval"></div>
     <div id="thirds-sixths-tenths"></div>
     <div id="tied-notes"></div>
+    <div id="leading-tone-approached-by-step"></div>
   </div>
 </div>
 
