--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -24,3 +24,17 @@ code {
   padding: 10px;
   width: 810px;
 }
+
+
+.rule-valid {
+  color: green;
+  font-weight: bold;
+}
+
+.rule-invalid {
+  color: red;
+}
+
+.rule-validity-display {
+  padding-left: 10px;
+}
