Added book citation

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -15,6 +15,13 @@
     <div id="tied-notes"></div>
     <div id="leading-tone-approached-by-step"></div>
   </div>
+
+  <p class="book-citation">
+    The rules used for validation are taken from
+    <a href="https://www.amazon.com/Counterpoint-Composition-Study-Voice-Leading/dp/023107039X" target="_blank">
+      Counterpoint in Composition: The Study of Voice Leading
+    </a> by Felix Salzar and Carl Schachter
+  </p>
 </div>
 
 
